Bug fixes for pages not showing recently viewed

--- a/BikeWale.UI/css/bw-common-atf.css
+++ b/BikeWale.UI/css/bw-common-atf.css
@@ -107,7 +107,7 @@ select.form-control	{ -moz-appearance: none; -webkit-appearance:none; background
 #errNewBikeSearch.ui-autocomplete { width:470px;position:absolute;top:40px;left:3px; color:#4d5057;text-align: left; }
 .error-tooltip-siblings { display:none; }
 
-#global-recent-searches, #new-trending-bikes, #new-global-recent-searches{width:100%;top:29px;left:0;color:#4d5057;text-align: left;background: #fff;z-index: 202;border-top:0;}
+#new-trending-bikes, #new-global-recent-searches{width:100%;top:29px;left:0;color:#4d5057;text-align: left;background: #fff;z-index: 202;border-top:0;}
 #new-trending-bikes, #new-global-recent-searches{ width:470px;top: 37px; }
 /* global-location classes */
 .global-location { position: relative; display: inline-block; vertical-align:middle; color: #fff; margin-right: 20px; z-index: 5; }
@@ -427,10 +427,10 @@ a.bikeTitle { color:#2a2a2a; font-size: 16px; font-weight: bold; display: block;
     width: 100%;
     text-align: left;
     border-top: none;
-    z-index: 1;
-		border: 1px solid #ccc;
-		overflow: hidden;
-		padding-bottom: 10px;
+    z-index: 202;
+	border: 1px solid #ccc;
+	overflow: hidden;
+	padding-bottom: 10px;
 }
 
 #new-global-search-section {
